--- a/war/index.html
+++ b/war/index.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon"
-	href="http://joncoe.com/clients/risevision/favicon.ico">
+<link rel="shortcut icon" href="http://joncoe.com/clients/risevision/favicon.ico">
 
 <title>Rise Vision: Media Library</title>
 
@@ -25,9 +24,6 @@
 <link href="lib/bootstrap-switch/css/bootstrap3/bootstrap-switch.css" rel="stylesheet" />
 <link href="css/media_library.css" rel="stylesheet"/>
 
-
-<!--   <link rel="stylesheet" href="css/app.css"> -->
-<!--   <link rel="stylesheet" href="bootstrap/css/bootstrap.css"> -->
 <script src="lib/angular/angular.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers.js"></script>
@@ -36,15 +32,12 @@
 <script src="lib/angular/angular-resource.js"></script>
 <script src="lib/angular/angular-route.js"></script>
 
-<!-- <script src="./jquery.min.js" style="color: rgb(136, 136, 136);"></script> -->
-<!--     <script src="./Rise Vision  Media Library_files/jquery.easing.min.js"></script> -->
-<!--     <script type="text/javascrupt" src="./Rise Vision  Media Library_files/jquery-ui.min.js"></script> -->
-<!--     <script type="text/javascript" src="./Rise Vision  Media Library_files/jquery.animate-colors-min.js"></script> -->
-<!--     <script type="text/javascript" src="./Rise Vision  Media Library_files/bootstrap-switch.min.js"></script> -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" style="color: rgb(85, 85, 85);"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script type="text/javascrupt" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
+<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script>
 
 <!-- <script type="text/javascript" src="./media.js"></script> -->
-<!-- <script type="text/javascript" src="http://joncoe.com/clients/risevision/js/media.js"></script> -->
-
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
@@ -154,19 +147,11 @@
 
 	</div>
 	
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" style="color: rgb(85, 85, 85);"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script type="text/javascrupt" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-		
-    <script type="text/javascript" src="lib/bootstrap-switch/js/bootstrap-switch.js"></script>
-
-    <script type="text/javascript" src="lib/media.js"></script>
-
-
+  <!-- Latest compiled and minified JavaScript -->
+  <!-- <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script> -->
+  <script type="text/javascript" src="lib/bootstrap-switch/js/bootstrap-switch.js"></script>
+  <script type="text/javascript" src="lib/media.js"></script>
 
 </body>
 </html>
