Project re-organization; File Extension, Size, Storage Used

--- a/war/index.html
+++ b/war/index.html
@@ -50,7 +50,7 @@
   <div class="container select-presentation" id="media-library-container">
 
 		<div id="storage-usage-details" class="right">
-			Storage Used: 500MB / Bandwidth Used: 12GB 
+			Storage Used: {{librarySize | fileSizeFilter}} / Bandwidth Used: N/A 
 			<a href="" class="download-csv">
 				<i class="fa fa-cloud-download"></i>
 <!--		<span class="glyphicon glyphicon-cloud-download"></span>-->
