--- a/war/index.html
+++ b/war/index.html
@@ -153,25 +153,8 @@
   <div class="modal fade" id="uploaddialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" ng-controller="UploadController">
     <div class="modal-dialog">
       <div class="modal-content">
-				<div class="modal-header no-border">
-<!--					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-						<img src="./images/close-btn-black.png" alt="close button" class="cancel-and-close"></button> -->
-					<h2 class="modal-title" id="myModalLabel">
-					Upload Files</h4>
-				</div>
-				<div class="modal-body shopping-cart-modal-body">
-					<input type="file" name="fileName" id="fileInput" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/> 
-				</div>
-				<div class="modal-footer no-border">
-					<button class="btn btn-primary" type="button" ng-click="uploadFiles()" ng-disabled="fileCount > 0">
-						Upload <i class='fa fa-check-circle'></i>
-					</button>
-					<button type="button" class="btn btn-primary" data-dismiss="modal">
-						Cancel
-					</button>
-				</div>
-
 				<form id="uploadform" target="uploadcompleteframe" action="" enctype="multipart/form-data" method="post">
+
 					<input type="hidden" name="key" ng-value="fileName">
 					<input type="hidden" name="success_action_redirect" ng-value="responseUrl">
 					<input type="hidden" name="acl" value="public-read">
@@ -180,11 +163,29 @@
 					<input type="hidden" name="GoogleAccessId" ng-value="googleAccessId">
 					<input type="hidden" name="policy" ng-value="policyBase64">
 					<input type="hidden" name="signature" ng-value="signature">
-					<input type="file" id="file" name="file" style="position:absolute;left:0px;top:0px;visibility:hidden;opacity:0;" onchange="angular.element(this).scope().loadFiles(this)">
+<!--				<input type="file" id="file" name="file" style="position:absolute;left:0px;top:0px;visibility:hidden;opacity:0;" onchange="angular.element(this).scope().loadFiles(this)"> -->
+
+					<div class="modal-header no-border">
+<!--						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+							<img src="./images/close-btn-black.png" alt="close button" class="cancel-and-close"></button> -->
+						<h2 class="modal-title" id="myModalLabel">
+						Upload Files</h4>
+					</div>
+					<div class="modal-body shopping-cart-modal-body">
+						<input type="file" name="file" id="file" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/> 
+					</div>
+					<div class="modal-footer no-border">
+<!--						<button class="btn btn-primary" type="button" ng-click="uploadFiles()" ng-disabled="fileCount > 0">
+							Upload <i class='fa fa-check-circle'></i>
+						</button> -->
+						<button type="button" class="btn btn-primary" data-dismiss="modal">
+							Done
+						</button>
+					</div>
+
+					<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
+
 				</form>
-
-				<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
-
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
