--- a/war/index.html
+++ b/war/index.html
@@ -37,6 +37,13 @@
 <script type="text/javascrupt" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
 <script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script>
 
+<!-- <script type="text/javascript" src="lib/jquery.form.js"></script> -->
+
+<!--
+<script type="text/javascript" src="lib/dropzone/dropzone.js"></script>
+<link href="lib/dropzone/css/dropzone.css" rel="stylesheet" />
+-->
+
 <!-- <script type="text/javascript" src="./media.js"></script> -->
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -123,7 +130,15 @@
 				</div>
 
 			</div>
-
+<!--
+			<div>
+				<div class="progress progress-striped active" ng-controller="ProgressController">
+  				<div class="progress-bar"  role="progressbar" aria-valuenow="{{uploadProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{uploadProgress}}%">
+    				<span class="sr-only">{{uploadProgress}}% Complete</span>
+  				</div>
+				</div>
+			</div>
+-->
 		</div>
 
 
@@ -149,7 +164,7 @@
 
 	</div>
 	
-      <!-- Modal -->
+	<!-- Modal -->
   <div class="modal fade" id="uploaddialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" ng-controller="UploadController">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -163,29 +178,38 @@
 					<input type="hidden" name="GoogleAccessId" ng-value="googleAccessId">
 					<input type="hidden" name="policy" ng-value="policyBase64">
 					<input type="hidden" name="signature" ng-value="signature">
-<!--				<input type="file" id="file" name="file" style="position:absolute;left:0px;top:0px;visibility:hidden;opacity:0;" onchange="angular.element(this).scope().loadFiles(this)"> -->
-
-					<div class="modal-header no-border">
-<!--						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-							<img src="./images/close-btn-black.png" alt="close button" class="cancel-and-close"></button> -->
-						<h2 class="modal-title" id="myModalLabel">
-						Upload Files</h4>
-					</div>
-					<div class="modal-body shopping-cart-modal-body">
-						<input type="file" name="file" id="file" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/> 
-					</div>
-					<div class="modal-footer no-border">
-<!--						<button class="btn btn-primary" type="button" ng-click="uploadFiles()" ng-disabled="fileCount > 0">
-							Upload <i class='fa fa-check-circle'></i>
-						</button> -->
-						<button type="button" class="btn btn-primary" data-dismiss="modal">
-							Done
-						</button>
-					</div>
-
-					<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
+<!--					<input type="hidden" name="file" ng-value="fileContent"> -->
+					<input type="file" name="selectedFile" id="selectedFile" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/>
 
 				</form>
+				<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
+
+
+				<div class="modal-header no-border">
+<!--					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+						<img src="./images/close-btn-black.png" alt="close button" class="cancel-and-close"></button> -->
+					<h2 class="modal-title" id="myModalLabel">
+					Upload Files</h4>
+				</div>
+				<div class="modal-body shopping-cart-modal-body">
+<!--					<input type="file" name="selectedFile" id="selectedFile" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/> -->
+<!--	
+					<form action="##" class="dropzone" id="my-awesome-dropzone">
+					  <div class="fallback">
+					    <input name="file" type="file" multiple />
+						</div>
+					</form>
+-->
+				</div>
+				<div class="modal-footer no-border">
+<!--					<button class="btn btn-primary" type="button" ng-click="uploadFiles()" ng-disabled="fileCount > 0">
+						Upload <i class='fa fa-check-circle'></i>
+					</button> -->
+					<button type="button" class="btn btn-primary" data-dismiss="modal">
+						Done
+					</button>
+				</div>
+
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
