Few tweaks and styling changes

--- a/war/index.html
+++ b/war/index.html
@@ -166,8 +166,24 @@
 
 		<!--Body content-->
 		<div ng-view></div>
+
 	<!-- </div> -->
 
+
+		<div class="row section">
+			<div class="col-md-12">
+				<div class="checkbox">
+					<label for="terms">I acknowledge that there is currently no
+					charge for the use of the Media Library and that at an as of yet to
+					be determined date in the future, there will be a cost and at that
+					time I will have 30 days to decide if I wish to continue using this
+					Media Library or not.</label>
+					<input id="terms" name="terms" type="checkbox" value="terms">
+				</div>
+			</div>
+		</div>
+
+<!--
 	<div class="container" id="terms-and-conditions-checkbox">
 
 		<div class="row">
@@ -182,7 +198,8 @@
 		</div>
 
 	</div>
-	
+-->
+
 	</div>
 
 	<!-- Modal -->
