--- a/war/index.html
+++ b/war/index.html
@@ -1,46 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" ng-app="medialibrary">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="shortcut icon" href="http://joncoe.com/clients/risevision/favicon.ico">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="http://joncoe.com/clients/risevision/favicon.ico">
 
-<title>Rise Vision: Media Library</title>
+	<title>Rise Vision: Media Library</title>
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.css">
-<!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
+	<!-- Latest compiled and minified CSS -->
+	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="lib/bootstrap-switch/css/bootstrap3/bootstrap-switch.css" rel="stylesheet" type="text/css">
+	<link href="css/media-library.css" rel="stylesheet" type="text/css">
 
-<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+	<script type="text/javascript" src="lib/angular/angular.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/controllers.js"></script>
+	<script type="text/javascript" src="js/filters.js"></script>
+	<script type="text/javascript" src="js/services.js"></script>
+	<script type="text/javascript" src="lib/angular/angular-resource.js"></script>
+	<script type="text/javascript" src="lib/angular/angular-route.js"></script>
 
-<!-- Custom styles for this template -->
-<!-- <link href="http://joncoe.com/clients/risevision/css/rise.css" rel="stylesheet"> -->
-<!-- <link href="http://joncoe.com/clients/risevision/css/bootstrap-switch.css" rel="stylesheet"> -->
-<!-- <link href="http://joncoe.com/clients/risevision/css/media_library.css" rel="stylesheet"> -->
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<script type="text/javascrupt" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script>
 
-<link href="css/rise.css" rel="stylesheet"/>
-<link href="lib/bootstrap-switch/css/bootstrap3/bootstrap-switch.css" rel="stylesheet" />
-<link href="css/media_library.css" rel="stylesheet"/>
-<!-- <link href="http://s3.amazonaws.com/Common-Test/css/rise.css" rel="stylesheet" /> -->
+	<script type="text/javascript" src="http://rvaviewer-test.appspot.com/gadgets/gadgets.min.js"></script>
 
-<script src="lib/angular/angular.js"></script>
-<script src="js/app.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/filters.js"></script>
-<script src="js/services.js"></script>
-<script src="lib/angular/angular-resource.js"></script>
-<script src="lib/angular/angular-route.js"></script>
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" style="color: rgb(85, 85, 85);"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script type="text/javascrupt" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
-<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script>
-
-<script type="text/javascript" src="http://rvaviewer-test.appspot.com/gadgets/gadgets.min.js"></script>
-
-<!-- <script type="text/javascript" src="lib/jquery.form.js"></script> -->
+	<!-- <script type="text/javascript" src="lib/jquery.form.js"></script> -->
 
 <!--
 <script type="text/javascript" src="lib/dropzone/dropzone.js"></script>
@@ -48,107 +36,62 @@
 -->
 
 <!-- <script type="text/javascript" src="./media.js"></script> -->
-
-<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-  <![endif]-->
 </head>
 <body>
-
 	<div class="widget-overlay"></div>
-	<div class="widget-wrapper container modal-content">
-		<button id="settings-close" type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeButtonClick()">
-			<img src="../images/close.png" alt="Close">
-		</button>
-
-<!--  <div class="container select-presentation" id="media-library-container"> -->
-
-		<div>
-  		<h2>Media Library</h2>
-		</div>
-
-
-
-  
-		<div class="search-presentations">
-<!--	<div class="form-label no-help">Search Media</div> -->
-  		<div>
-				<div class="col-lg-4 width80">
-    			<div class="input-group">
-      	  	<input ng-model="query" type="text" class="form-control" value="Search Media">
-     	    	<span class="input-group-btn">
-							<button class="btn btn-primary search" type="button">
-								<i class="fa fa-search"></i>
-							</button>
-						</span>
-					</div><!-- /input-group -->
-				</div><!-- /.col-lg-6 -->
-
-				<div style="float:right;" ng-controller="ViewController">
-      		<input id="view-toggle" type="checkbox" data-on-label="&lt;i class=&#39;fa fa-th-large&#39;&gt;&lt;/i&gt;" data-off-label="&lt;i class=&#39;fa fa-th-list&#39;&gt;&lt;/i&gt;" data-animated="false" data-on="primary" data-off="primary">
+	<div class="container">
+		<h1>Media Library</h1>
+		<div class="row filter">
+			<div class="col-xs-8 col-sm-9 col-md-10 search">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search Media" ng-model="query">
+					<span class="input-group-btn">
+						<button class="btn btn-primary" type="button">
+							<i class="fa fa-search"></i>
+						</button>
+					</span>
 				</div>
-
-      	<div class="clear"></div>
-  		</div>
-
-
-
-			<div id="media-management-buttons">
-
-				<div id="buttons-action" ng-controller="ButtonsController">
-				
-					<button class="btn btn-success" type="button" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
-						<!-- Select -->
-						<i class="fa fa-check-circle size_24"></i>
-					</button>
-
-					<button class="btn btn-primary" type="button" ng-click="closeButtonClick()">
-						<!-- Close -->
-						<i class="fa fa-times-circle size_20"></i>
-					</button>
-
-					<!-- <button class="btn btn-primary" type="button"> -->
-						<!-- Add -->
-					<!-- 	<i class="fa fa-plus-circle size_20"></i> -->
-					<!-- </button> -->
-
-					<button class="btn btn-primary" type="button" ng-click="uploadButtonClick()">
-						<!-- Upload -->
-						<i class="fa fa-upload size_20"></i>
-					</button>
-
-					<button class="btn btn-primary" type="button" ng-disabled="downloadDisabled">
-						<!-- Download -->
-						<i class="fa fa-download size_20"></i>
-					</button>
-
-					<button class="btn btn-primary" type="button">
-						<!-- Link -->
-						<i class="fa fa-link size_20"></i>
-					</button>
-
-					<button class="btn btn-primary" type="button" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
-						<!-- Delete -->
-						<i class="fa fa-trash-o size_20"></i>
-					</button>
-
-				</div>
-
-		<div id="storage-usage-details" class="right">
-			Storage Used: {{librarySize | fileSizeFilter}} / Bandwidth Used: N/A 
-			<a href="" class="download-csv">
-				<i class="fa fa-cloud-download"></i>
-<!--		<span class="glyphicon glyphicon-cloud-download"></span>-->
-			</a>
-  	</div>
-
-
 			</div>
-
-
-
+			<div class="col-xs-4 col-sm-3 col-md-2 text-right" ng-controller="ViewController"> <!-- text-right -->
+				<input id="view-toggle" type="checkbox" data-on-label="<i class='fa fa-th-large'></i>" data-off-label="<i class='fa fa-th-list'></i>" data-animated="false" data-on="primary" data-off="primary" checked>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-7">
+				<div id="buttons-action" class="actions" ng-controller="ButtonsController">
+					<!-- Select -->
+					<button class="btn btn-success" type="button" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
+						<i class="fa fa-check-circle"></i>
+					</button>
+					<!-- Close -->
+					<button class="btn btn-primary" type="button" ng-click="closeButtonClick()">
+						<i class="fa fa-times-circle"></i>
+					</button>
+					<!-- Upload -->
+					<button class="btn btn-primary" type="button" ng-click="uploadButtonClick()">
+						<i class="fa fa-upload"></i>
+					</button>
+					<!-- Download -->
+					<button class="btn btn-primary" type="button" ng-disabled="downloadDisabled">
+						<i class="fa fa-download"></i>
+					</button>
+					<!-- Link -->
+					<button class="btn btn-primary" type="button">
+						<i class="fa fa-link"></i>
+					</button>
+					<!-- Delete -->
+					<button class="btn btn-primary" type="button" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
+						<i class="fa fa-trash-o"></i>
+					</button>
+				</div>
+			</div>
+			<div class="col-sm-5 storage text-right">
+				Storage Used: {{librarySize | fileSizeFilter}} / Bandwidth Used: N/A 
+				<a href="" class="cloud-download">
+					<i class="fa fa-cloud-download"></i>
+				</a>
+			</div>
+		</div>
 <!--
 			<div>
 				<div class="progress progress-striped active" ng-controller="ProgressController">
@@ -157,57 +100,26 @@
   				</div>
 				</div>
 			</div>
--->
-		</div>
-
-
-
-
-
+		-->
 		<!--Body content-->
 		<div ng-view></div>
-
-	<!-- </div> -->
-
-
-		<div class="row section">
-			<div class="col-md-12">
-				<div class="checkbox">
-					<label for="terms">I acknowledge that there is currently no
-					charge for the use of the Media Library and that at an as of yet to
-					be determined date in the future, there will be a cost and at that
-					time I will have 30 days to decide if I wish to continue using this
-					Media Library or not.</label>
-					<input id="terms" name="terms" type="checkbox" value="terms">
-				</div>
-			</div>
-		</div>
-
-<!--
-	<div class="container" id="terms-and-conditions-checkbox">
-
-		<div class="row">
-			<div class="col-xs-1">
-				<input type="checkbox" id="accept-terms">
-			</div>
-			<div class="col-xs-11">I acknowledge that there is currently no
+		<div class="checkbox">
+			<label for="terms">
+				I acknowledge that there is currently no
 				charge for the use of the Media Library and that at an as of yet to
 				be determined date in the future, there will be a cost and at that
 				time I will have 30 days to decide if I wish to continue using this
-				Media Library or not.</div>
+				Media Library or not.
+			</label>
+			<input id="terms" name="terms" type="checkbox" value="terms">
 		</div>
-
-	</div>
--->
-
 	</div>
 
 	<!-- Modal -->
-  <div class="modal fade" id="uploaddialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" ng-controller="UploadController">
-    <div class="modal-dialog">
-      <div class="modal-content">
+	<div id="uploaddialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" ng-controller="UploadController">
+		<div class="modal-dialog">
+			<div class="modal-content">
 				<form id="uploadform" target="uploadcompleteframe" action="" enctype="multipart/form-data" method="post">
-
 					<input type="hidden" name="key" ng-value="fileName">
 					<input type="hidden" name="success_action_redirect" ng-value="responseUrl">
 					<input type="hidden" name="acl" value="public-read">
@@ -216,30 +128,27 @@
 					<input type="hidden" name="GoogleAccessId" ng-value="googleAccessId">
 					<input type="hidden" name="policy" ng-value="policyBase64">
 					<input type="hidden" name="signature" ng-value="signature">
-<!--					<input type="hidden" name="file" ng-value="fileContent"> -->
+					<!-- <input type="hidden" name="file" ng-value="fileContent"> -->
 					<input type="file" name="selectedFile" id="selectedFile" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/>
-
 				</form>
 				<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
-
-
-				<div class="modal-header no-border">
+				<div class="modal-header">
 <!--					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-						<img src="./images/close-btn-black.png" alt="close button" class="cancel-and-close"></button> -->
-					<h2 class="modal-title" id="myModalLabel">
-					Upload Files</h4>
-				</div>
-				<div class="modal-body shopping-cart-modal-body">
-<!--					<input type="file" name="selectedFile" id="selectedFile" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/> -->
+	<img src="./images/close-btn-black.png" alt="close button" class="cancel-and-close"></button> -->
+	<h2 class="modal-title" id="myModalLabel">
+		Upload Files</h4>
+	</div>
+	<div class="modal-body shopping-cart-modal-body">
+		<!--					<input type="file" name="selectedFile" id="selectedFile" multiple="multiple" onchange="angular.element(this).scope().loadFiles(this)"/> -->
 <!--	
 					<form action="##" class="dropzone" id="my-awesome-dropzone">
 					  <div class="fallback">
 					    <input name="file" type="file" multiple />
 						</div>
 					</form>
--->
-				</div>
-				<div class="modal-footer no-border">
+				-->
+			</div>
+			<div class="modal-footer">
 <!--					<button class="btn btn-primary" type="button" ng-click="uploadFiles()" ng-disabled="fileCount > 0">
 						Upload <i class='fa fa-check-circle'></i>
 					</button> -->
@@ -247,15 +156,13 @@
 						Done
 					</button>
 				</div>
-
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+			</div>
+		</div>
+	</div>
 	
-  <!-- Latest compiled and minified JavaScript -->
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="lib/bootstrap-switch/js/bootstrap-switch.js"></script>
-  <!-- <script type="text/javascript" src="lib/media.js"></script> -->
-
+	<!-- Latest compiled and minified JavaScript -->
+	<script type="text/javascript" src="//rise-common.s3.amazonaws.com/scripts/bootstrap/bootstrap.min.js"></script>
+	<script type="text/javascript" src="lib/bootstrap-switch/js/bootstrap-switch.js"></script>
+	<!-- <script type="text/javascript" src="lib/media.js"></script> -->
 </body>
 </html>
