More changes to buttons

--- a/war/index.html
+++ b/war/index.html
@@ -76,32 +76,46 @@
  			</div>
  		</div>
  		<div class="row">
- 			<div id="buttons-action" class="col-sm-7 actions" ng-controller="ButtonsController">
- 				<ul>
+ 			<div id="buttons-action" class="col-sm-7" ng-controller="ButtonsController">
+ 				<ul class="actions">
  					<li>
- 						<a href="#" class="glyphicons ok" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled"></a>
+ 						<a href="#" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
+ 							<i class="glyphicons ok"></i>
+ 						</a>
  					</li>
  					<li>
- 						<a href="#" class="glyphicons remove" ng-click="closeButtonClick()"></a>
+ 						<a href="#"  ng-click="closeButtonClick()">
+ 							<i class="glyphicons remove"></i>
+ 						</a>
  					</li>
  					<li>
- 						<a href="#" class="glyphicons cloud-upload" ng-click="uploadButtonClick()"></a>
+ 						<a href="#" ng-click="uploadButtonClick()">
+ 							<i class="glyphicons cloud-upload"></i>
+ 						</a>
  					</li>
  					<li>
- 						<a href="#" class="glyphicons cloud-download" ng-disabled="downloadDisabled"></a>
+ 						<a href="#"  ng-disabled="downloadDisabled">
+ 							<i class="glyphicons cloud-download"></i>
+ 						</a>
  					</li>
  					<li>
- 						<a href="#" class="glyphicons link"></a>
+ 						<a href="#">
+ 							<i class="glyphicons link"></i>
+ 						</a>
  					</li>
  					<li>
- 						<a href="#" class="glyphicons bin" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled"></a>
+ 						<a href="#" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
+ 							<i class="glyphicons bin"></i>
+ 						</a>
  					</li>
  				</ul>
  			</div>
- 			<div class="col-sm-5 storage">
- 				<ul>
+ 			<div class="col-sm-5">
+ 				<ul class="storage">
  					<li>
- 						<a href="#" class="glyphicons cloud-download"></a>
+ 						<a href="#">
+ 							<i class="glyphicons cloud-download"></i>
+ 						</a>
  					</li>
  					<li>
  						<span>Storage Used: {{librarySize | fileSizeFilter}} / Bandwidth Used: N/A</span>
