Removed redundant Close button

--- a/war/index.html
+++ b/war/index.html
@@ -79,32 +79,27 @@
  			<div id="buttons-action" class="col-sm-7" ng-controller="ButtonsController">
  				<ul class="actions">
  					<li>
- 						<a href="#" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
+ 						<a href="" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
  							<i class="glyphicons ok"></i>
  						</a>
  					</li>
  					<li>
- 						<a href="#"  ng-click="closeButtonClick()">
- 							<i class="glyphicons remove"></i>
- 						</a>
- 					</li>
- 					<li>
- 						<a href="#" ng-click="uploadButtonClick()">
+ 						<a href="" ng-click="uploadButtonClick()">
  							<i class="glyphicons cloud-upload"></i>
  						</a>
  					</li>
  					<li>
- 						<a href="#"  ng-disabled="downloadDisabled">
+ 						<a href=""  ng-disabled="downloadDisabled">
  							<i class="glyphicons cloud-download"></i>
  						</a>
  					</li>
  					<li>
- 						<a href="#">
+ 						<a href="">
  							<i class="glyphicons link"></i>
  						</a>
  					</li>
  					<li>
- 						<a href="#" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
+ 						<a href="" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
  							<i class="glyphicons bin"></i>
  						</a>
  					</li>
@@ -113,7 +108,7 @@
  			<div class="col-sm-5">
  				<ul class="storage">
  					<li>
- 						<a href="#">
+ 						<a href="">
  							<i class="glyphicons cloud-download"></i>
  						</a>
  					</li>
