Changed anchors to buttons

--- a/war/index.html
+++ b/war/index.html
@@ -79,29 +79,29 @@
  			<div id="buttons-action" class="col-sm-7" ng-controller="ButtonsController">
  				<ul class="actions">
  					<li>
- 						<a href="" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
+ 						<button type="button" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
  							<i class="glyphicons ok"></i>
- 						</a>
+ 						</button>
  					</li>
  					<li>
- 						<a href="" ng-click="uploadButtonClick()">
+ 						<button type="button" ng-click="uploadButtonClick()">
  							<i class="glyphicons cloud-upload"></i>
- 						</a>
+ 						</button>
  					</li>
  					<li>
- 						<a href=""  ng-disabled="downloadDisabled">
+ 						<button type="button" ng-disabled="downloadDisabled">
  							<i class="glyphicons cloud-download"></i>
- 						</a>
+ 						</button>
  					</li>
  					<li>
- 						<a href="">
+ 						<button type="button">
  							<i class="glyphicons link"></i>
- 						</a>
+ 						</button>
  					</li>
  					<li>
- 						<a href="" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
+ 						<button type="button" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
  							<i class="glyphicons bin"></i>
- 						</a>
+ 						</button>
  					</li>
  				</ul>
  			</div>
