--- a/war/index.html
+++ b/war/index.html
@@ -22,9 +22,9 @@
 	<script type="text/javascript" src="lib/angular/angular-route.js"></script>
 
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script type="text/javascrupt" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script>
+<!--	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
+<!--	<script type="text/javascrupt" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script> -->
+<!--	<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script> -->
 
 	<script type="text/javascript" src="//rvaviewer-test.appspot.com/gadgets/gadgets.min.js"></script>
 
@@ -178,7 +178,7 @@
 	</div>
 	
 	<!-- Latest compiled and minified JavaScript -->
-	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script>
+<!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script>
 	<!-- <script type="text/javascript" src="lib/media.js"></script> -->
 </body>
