--- a/war/index.html
+++ b/war/index.html
@@ -83,18 +83,18 @@
  				<ul class="actions">
 <!--
  					<li>
- 						<button class="btn" type="button" title="Select" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled">
+ 						<button class="btn" type="button" title="Select" ng-click="$emit('FileSelectAction')" ng-disabled="selectDisabled || actionsDisabled">
  							<i class="glyphicons ok"></i>
  						</button>
  					</li>
 -->
  					<li>
- 						<button class="btn" type="button" title="Upload" ng-click="uploadButtonClick()">
+ 						<button class="btn" type="button" title="Upload" ng-click="uploadButtonClick()" ng-disabled="actionsDisabled">
  							<i class="glyphicons cloud-upload"></i>
  						</button>
  					</li>
  					<li>
- 						<button class="btn" type="button" title="Download" ng-disabled="downloadDisabled">
+ 						<button class="btn" type="button" title="Download" ng-disabled="downloadDisabled || actionsDisabled">
  							<i class="glyphicons cloud-download"></i>
  						</button>
  					</li>
@@ -106,7 +106,7 @@
  					</li>
 -->
  					<li>
- 						<button class="btn" type="button" title="Delete" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled">
+ 						<button class="btn" type="button" title="Delete" ng-click="$emit('FileDeleteAction')" ng-disabled="deleteDisabled || actionsDisabled">
  							<i class="glyphicons bin"></i>
  						</button>
  					</li>
