Enabling the Media Library in the Company record

--- a/war/index.html
+++ b/war/index.html
@@ -55,7 +55,7 @@
 		</div>
  		<div class="checkbox">
  			<label for="termsCheckbox">
- 				<input id="termsCheckbox" type="checkbox">
+ 				<input id="termsCheckbox" type="checkbox" disabled>
  				I acknowledge that there is currently no
  				charge for the use of the Media Library and that at an as of yet to
  				be determined date in the future, there will be a cost and at that
