--- a/war/index.html
+++ b/war/index.html
@@ -32,6 +32,7 @@
 	
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
+	<script type="text/javascript" src="js/ctr-files.js"></script>
 	<script type="text/javascript" src="js/ctr-upload.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
 	<script type="text/javascript" src="js/services.js"></script>
