Created main controller; cleaned up ctr-files

--- a/war/index.html
+++ b/war/index.html
@@ -56,7 +56,7 @@
 
 <!-- <script type="text/javascript" src="./media.js"></script> -->
 </head>
-<body>
+<body ng-controller="MainController">
 	<!-- Donna: To remove the pop-up style, remove the widget-overlay element,
  	the widget-wrapper and modal-content classes from the container div, and
  	the close button. -->
