Removed Terms Checkbox and all associated code

--- a/war/index.html
+++ b/war/index.html
@@ -67,16 +67,21 @@
 		<div class="alert alert-danger" ng-show="authenticationError">
 			You are not authorized to view this Company's files...
 		</div>
- 		<div class="checkbox">
- 			<label for="termsCheckbox">
- 				<input id="termsCheckbox" type="checkbox" disabled>
- 				I acknowledge that there is currently no
- 				charge for the use of the Media Library and that at an as of yet to
- 				be determined date in the future, there will be a cost and at that
- 				time I will have 30 days to decide if I wish to continue using this
- 				Media Library or not.
- 			</label>
- 		</div>
+<!--  		<div class="checkbox"> -->
+<!--  			<label for="termsCheckbox"> -->
+<!--  				<input id="termsCheckbox" type="checkbox" disabled> -->
+<!--  				I acknowledge that there is currently no -->
+<!--  				charge for the use of the Media Library and that at an as of yet to -->
+<!--  				be determined date in the future, there will be a cost and at that -->
+<!--  				time I will have 30 days to decide if I wish to continue using this -->
+<!--  				Media Library or not. -->
+<!--  			</label> -->
+<!--  		</div> -->
+		<div class="row checkbox">
+			There is currently no charge for the use of the Media Library, however at an as of yet to be 
+			determined date in the future, there will be a cost and at that time you will have 30 days 
+			to decide if you wish to continue using this Media Library or not.
+		</div>
  		<div class="row filter">
  			<div class="col-xs-8 col-sm-9 col-md-10 search">
  				<div class="input-group">
