--- a/war/index.html
+++ b/war/index.html
@@ -11,7 +11,8 @@
 	<link href="//s3.amazonaws.com/rise-common-test/styles/feature-v2/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
 	
 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-switch/bootstrap-switch.min.css" rel="stylesheet" type="text/css">
-	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.css" rel="stylesheet" type="text/css">
+<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.css" rel="stylesheet" type="text/css"> -->
+	<link href="//s3.amazonaws.com/rise-common-test/styles/feature-v2/glyphicons/glyphicons.css" rel="stylesheet" type="text/css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="css/media-library.css" rel="stylesheet" type="text/css">
 
@@ -63,11 +64,18 @@
  	<div class="widget-overlay"></div>
  	<div class="widget-wrapper container modal-content">
 	 	<div class="modal-header">
-			<h1>Rise Storage
-			<button type="button" class="close" aria-hidden="true" ng-click="closeButtonClick()">
-				<img src="//s3.amazonaws.com/rise-common/images/close.png" alt="Close">
+	 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+				<i class="glyphicons remove"></i>
 			</button>
-			</h1>
+			<h2 class="modal-title">
+				Storage
+			</h2>
+	 	
+<!-- 			<h1>Rise Storage -->
+<!-- 			<button type="button" class="close" aria-hidden="true" ng-click="closeButtonClick()"> -->
+<!-- 				<img src="//s3.amazonaws.com/rise-common/images/close.png" alt="Close"> -->
+<!-- 			</button> -->
+<!-- 			</h1> -->
 		</div>
 
 <!-- 		<div ng-include="'//s3.amazonaws.com/rise-common-test/partials/header.html'" ng-controller="commonController"></div> -->
@@ -85,10 +93,13 @@
 <!--  				Media Library or not. -->
 <!--  			</label> -->
 <!--  		</div> -->
-		<div class="row checkbox">
-			There is currently no charge for the use of the Media Library, however at an as of yet to be 
-			determined date in the future, there will be a cost and at that time you will have 30 days 
-			to decide if you wish to continue using this Media Library or not.
+
+		<div class="row">
+  			<div class="col-md-12">
+  				There is currently no charge for the use of the Media Library, however at an as of yet to be 
+				determined date in the future, there will be a cost and at that time you will have 30 days 
+				to decide if you wish to continue using this Media Library or not.
+			</div>
 		</div>
  		<div class="row filter">
  			<div class="col-xs-8 col-sm-9 col-md-10 search">
