Changed title and added favicon

--- a/war/index.html
+++ b/war/index.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Rise Vision: Media Library</title>
+	<title>Rise Storage</title>
+
+	<link rel="shortcut icon" href="favicon.ico" />
 
 	<!-- Latest compiled and minified CSS -->
 <!-- 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
