Styling for the Sign In modal (not finalized)

--- a/war/modal.html
+++ b/war/modal.html
@@ -69,13 +69,19 @@
 						<i class="glyphicons remove"></i>
 					</button>
 					<h2 class="modal-title" id="myModalLabel">
-					This app requires you to Sign In.</h4>
+					Please Sign In</h2>
 				</div>
-				<div class="modal-body shopping-cart-modal-body">
-					<a href="" class="sign-in" ng-click="login()">
-						<span>Sign In</span>
-						<i class="glyphicons log_in"></i>
-					</a>
+				<div class="modal-body">
+					<nav class="navbar navbar-default navbar-static-top" style="height:50px;" role="navigation">
+					<ul class="nav navbar-nav navbar-left">
+						<li>
+							<a href="" class="sign-in" ng-click="login()">
+							<span>Sign In</span>
+							<i class="glyphicons log_in"></i>
+							</a>
+						</li>
+					</ul>
+					</nav>
 				</div>
 				<div class="modal-footer">
 
