Fixed Sign In button styling for modal

--- a/war/modal.html
+++ b/war/modal.html
@@ -72,8 +72,8 @@
 					Please Sign In</h2>
 				</div>
 				<div class="modal-body">
-					<nav class="navbar navbar-default navbar-static-top" style="height:50px;" role="navigation">
-					<ul class="nav navbar-nav navbar-left">
+					<nav class="navbar navbar-default navbar-static-top" role="navigation">
+					<ul class="nav navbar-nav navbar-right" style="float:left !important">
 						<li>
 							<a href="" class="sign-in" ng-click="login()">
 							<span>Sign In</span>
