--- a/war/modal.html
+++ b/war/modal.html
@@ -66,7 +66,7 @@
 			<div class="modal-content" ng-controller="commonController">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeButtonClick()">
-						<i class="glyphicons remove"></i>
+						<i class="glyphicons remove_2"></i>
 					</button>
 					<h2 class="modal-title" id="myModalLabel">
 						Please Sign In</h2>
@@ -85,7 +85,7 @@
 		<div class="widget-wrapper container modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeButtonClick()">
-					<i class="glyphicons remove"></i>
+					<i class="glyphicons remove_2"></i>
 				</button>
 				<h2 class="modal-title">
 					Storage
