Updated links to common code

--- a/war/modal.html
+++ b/war/modal.html
@@ -10,11 +10,11 @@
 
 	<!-- Latest compiled and minified CSS -->
 	<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
-	<link href="//s3.amazonaws.com/rise-common-test/styles/feature-v2/bootstrap/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="//s3.amazonaws.com/rise-common-test/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
 	
 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-switch/bootstrap-switch.min.css" rel="stylesheet" type="text/css">
-	<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.css" rel="stylesheet" type="text/css"> -->
-	<link href="//s3.amazonaws.com/rise-common-test/styles/feature-v2/glyphicons/glyphicons.css" rel="stylesheet" type="text/css">
+	<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css"> -->
+	<link href="//s3.amazonaws.com/rise-common-test/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="css/media-library.css" rel="stylesheet" type="text/css">
 
@@ -26,7 +26,7 @@
 	<script type="text/javascript" src="lib/angular/angular-resource.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-route.js"></script>
 
-	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/feature-v2/rise/ctr-common.js"></script>
+	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/rise/ctr-common.js"></script>
 
 	<script type="text/javascript" src="js/data/data-auth.js"></script>
 	<script type="text/javascript" src="js/data/data-cache.js"></script>
@@ -98,7 +98,7 @@
 
 		<!-- Latest compiled and minified JavaScript -->
 		<!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script> -->
-		<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/feature-v2/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/bootstrap/bootstrap.min.js"></script>
 		<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script>
 		<!-- <script type="text/javascript" src="lib/media.js"></script> -->
 	</body>
